--- a/src/app/minicomponents/comment-section/comment-section.component.html
+++ b/src/app/minicomponents/comment-section/comment-section.component.html
@@ -2,21 +2,26 @@
   <div style="display: flex;">
     <mat-form-field mat-list-item>
       <mat-label>Leave a comment</mat-label>
-      <textarea [(ngModel)]="newComment.value" name="value" matInput placeholder="Ex. It makes me feel..."></textarea>
+      <textarea [(ngModel)]="newComment.text" name="value" matInput placeholder="Ex. It makes me feel..."></textarea>
     </mat-form-field>
-    <button mat-mini-fab color="primary" [disabled]="newComment.value == ''" mat-icon-button aria-label="Comment" (click)="value=''">
-      <mat-icon>close</mat-icon>
+    <button
+      mat-mini-fab color="primary"
+      [disabled]="newComment.text == ''"
+      mat-icon-button
+      aria-label="Comment" (click)="addComment()"
+    >
+      <mat-icon>add_comment</mat-icon>
     </button>
   </div>
   <div class="comment-list">
-    <a *ngFor="let item of [1, 2, 3, 4, 5, 6, 7, 8, 9]" mat-list-item (click)="like($event)">
+    <a *ngFor="let comment of this.comments" mat-list-item (click)="like($event)">
       <span mat-line>
         <b>
-          Google Keep
+          {{ comment.commenting_user['first_name'] + ' ' + comment.commenting_user['last_name'] }}
         </b>
-        <abbr>1 day</abbr>
+        <abbr>{{ comment.timestamp }}</abbr>
       </span>
-      <span mat-line>Add to a note</span>
+      <span mat-line>{{ comment.text }}</span>
     </a>
   </div>
 </mat-nav-list>
