--- a/src/app/view_components/offer-list/offer-list.component.html
+++ b/src/app/view_components/offer-list/offer-list.component.html
@@ -1,5 +1,5 @@
 <div style="padding: 0px 10px;
-top: var(--menu-height);
+top: 0;
 position: absolute;
 width: calc(100% - 20px);">
   <div class="container">
