--- a/src/app/view_components/user-profile/user-profile.component.html
+++ b/src/app/view_components/user-profile/user-profile.component.html
@@ -6,8 +6,7 @@
       <user-details
       [user]="this.user"
       [iscurrentuser]="user.id === this.currentUserId"
-      [embedded]="true"
-      (cogButtonClick)="editAndSave(resume)"></user-details>
+      [embedded]="true"></user-details>
     </div>
 
     <mat-tab-group>
