--- a/src/app/subcomponents/resume/resume.component.css
+++ b/src/app/subcomponents/resume/resume.component.css
@@ -6,6 +6,12 @@ mat-list-item {
 mat-form-field{
   flex-grow: .33;
 }
+div.resume-toolbar{
+  width: 100%;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-bottom: 12px;
+}
 div.item-content{
   flex-direction: row;
     display: flex;
@@ -36,4 +42,9 @@ mat-list-item mat-list{
 }
 .item-content.stretch>*{
   flex-grow: 1;
+}
+button.more_options{
+  position: absolute;
+  top: 0;
+  right: 0;
 }
