--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: auto; }
-body { margin: 0; font-family: "Helvetica Neue", sans-serif; background-color: #ddd; overflow-y: scroll;}
+body { margin: 0; font-family: "Helvetica Neue", sans-serif; background-color: #ddd; overflow-y: auto;}
 *, *::after, *::before{
   transition: all .5s ease;
   cursor: default;
@@ -11,7 +11,7 @@ mat-card, mat-card *, mat-card *::before, mat-card *::after{
 }
 
 router-outlet+*:not(app-login)>*:first-child, app-about>*:first-child, app-user>*:first-child, user-profile>*:first-child{
-  top: var(--menu-height);
+  top: calc(var(--menu-height)*.1);
     position: relative;
 }
 @media only screen and (orientation: landscape) and (min-width: 960px) {
@@ -27,9 +27,18 @@ app-login {
   width: 0%;
   left: 0%;
 }
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.7) inset !important;
+  box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.7) inset !important;
+}
 /* Global variables */
 *{
   --menu-height: 64px;
+}
+@media (max-width: 599px){
+  *{
+    --menu-height: 56px;
+  }
 }
 /* Cards */
 mat-card-toolbar{
@@ -87,6 +96,7 @@ mat-card-actions>button{
 /* width */
 *::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
   opacity: 0;
 }
 *:hover::-webkit-scrollbar {
@@ -108,6 +118,3 @@ mat-card-actions>button{
 ::-webkit-scrollbar-thumb:hover {
   background: var(--primary-color);
 }
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
